--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,4 +32,9 @@ spring.redis.password=123456
 
 #基本路径
 server.servlet.context-path=/tgcareer
-
+#thymeleaf start
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+#开发时关闭缓存,不然没法看到实时页面
+spring.thymeleaf.cache=false
+#thymeleaf end
