--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ##数据库连接信息
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vinbrattany?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=zx199577
+spring.datasource.password=123456
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.hikari.connection-init-sql=set names utf8mb4
